fix: 태그 기반 이미지 관리로 수정